Converted to FoxAPI standalone jar